<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="btPopularMovies">POPULAR MOVIES</string>
    <string name="btStockHwak">STOCK HAWK</string>
    <string name="btBuildItBigger">BUILD IT BIGGER</string>
    <string name="btMakeYoutAppMaterial">MAKE YOUR APP MATERIAL</string>
    <string name="btGoUbiquitous">GO UBIQUITOUS</string>
    <string name="btCapstone">CAPSTONE</string>
</resources>
